<resources>
    <string name="app_name">BiblioWar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_text">Usuario</string>
    <string name="user_pass">Contraseña</string>
    <string name="log_in">Iniciar Sesion</string>
    <string name="register">Registrarse</string>
    <string name="personality">Personajes Historicos</string>
    <string name="places">Lugares</string>
    <string name="favourite">Mis favoritos</string>
    <string name="welcome_text">Bienvenido a BiblioWar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_info">Detalles</string>
    <string name="detail_character_name">Nombre</string>
    <string name="detail_character_subname">Apellido</string>
    <string name="detail_character_fechaNac">Fecha Nacimiento</string>
    <string name="close_session">Cerrar Sesion</string>
    <string name="home_title">BiblioWar Inicio</string>
    <string name="character_title">Personajes Históricos</string>
    <string name="places_title">Lugares Históricos</string>
    <string name="favorites_title">Mis favoritos</string>
    <string name="favorite_person">Mis Personajes Historicos Favoritos</string>
    <string name="favorite_place">Mis Lugares Historicos Favoritos</string>
    <string name="add_character">Añadir personaje historico</string>
    <string name="add_place">Añadir lugar histórico</string>
    <string name="add_place_name">Nombre del lugar</string>
    <string name="add_place_country">Pais</string>
    <string name="add_place_continente">Continente</string>


</resources>