<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/personality" />
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/places" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/favourite" />
    </group>
</menu>