<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.CreatePlaceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/admin_place_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="118dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/add_place_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/admin_place_pais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="115dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/add_place_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin_place_nombre" />

        <EditText
            android:id="@+id/admin_place_continente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="115dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/add_place_continente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin_place_pais" />

        <Button
            android:id="@+id/button_admin_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="71dp"
            android:layout_marginEnd="96dp"
            android:text="@string/add_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin_place_continente" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>