<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.personajes.DetailCharacterActivity"
    android:background="@color/teal_700">

    <ImageView
        android:id="@+id/char_detail_img"
        android:layout_width="257dp"
        android:layout_height="186dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detail_char_text_name_content"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="48dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/char_detail_img" />

    <TextView
        android:id="@+id/detail_char_text"
        android:layout_width="111dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="232dp"
        android:text="@string/detail_character_name"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/char_detail_img" />

    <TextView
        android:id="@+id/detail_character_subname_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_text_name_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="248dp"
        android:text="@string/detail_character_subname"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_text" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="130dp"
        android:layout_height="75dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:text="@string/detail_character_fechaNac"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/detail_character_fechaNac_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_character_subname_content" />

    <Button
        android:id="@+id/button_detail_info"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="124dp"
        android:text="@string/more_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>